=== Opus Primus changelog.txt ===
Last revised March 18, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.1 ==
* Released ...

= Code =
* Added `excerpt_more_link` and attached to `excerpt_more` filter
* Added `anchor_title_text` for use with `excerpt_more_link` and permalink in the post meta details
* Added additional list wrapper around each comment type
* Added Breadcrumbs trails to pages and posts
* Added Comment Tabs for each type (Comment, Pingback, and Trackback)
* Created and enqueued 'opus-primus-comment-tabs.js'
* Created Header class
* Fixed comments (only) count output
* Limit width generated by "Full Size Video" JavaScript to a maximum of 1000px
* Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
* Refactored `opus-primus-header` to reflect class/method changes of Structures and Header

= CSS =
* Added classes to `h2`, `ul`, and `li` elements in `OpusPrimusAuthors::author_details`
* Add minor comments styles
* Center content of Post Format: Video posts.

= Miscellaneous =
* Removed unused style sheet 'opus-primus-responsive-layout.css'

/** ------------------------------------------------------------------------- */
== Version 1.0.4 ==
* Released March 2013

= Code =
* Added 'Breadcrumbs' class
* Fixed problem with wrong loop method call in 'archive.php'
* Moved `breadcrumbs` method from 'Structures' class to 'Breadcrumbs' class
* Removed `hgroup` container from 'opus-primus-header'

= CSS =
* Added Breadcrumbs section
* Code formatting

/** ------------------------------------------------------------------------- */
== Version 1.0.3 ==
* Released February 2013

= Code =
* Changed the MetaBoxes class to TagLines
* Moved TagLines into its own Stanza as another example of the theme extensibility
* Added `breadcrumbs` method to Structures as a precursor to new features in version 1.1
