@@ -2,7 +2,7 @@
 Theme Name: Opus Primus
 Theme URI: http://opusprimus.com/
 Description: A WordPress Framework Theme ... the first work. It works first. Designed and developed to be extensible and easily modified, based in the principles of decisions not options. Opus Primus supports all of the current Post-Formats as well as automagically converting between one, two, and three column layouts. You have access to custom backgrounds as well as a flexible custom header, too. Feel free to visit the Opus Primus website for more details and information about the theme and how it is built. Also, in the near future, you will be able to find tutorials on how to modify and work with Opus Primus Child-Themes.
-Version: 1.1-alpha
+Version: 1.1
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
 WordPress Required Version: 3.4
