@@ -1,9 +1,9 @@
 === Opus Primus changelog.txt ===
-Last revised March 18, 2013
+Last revised March 19, 2013
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.1 ==
-* Released ...
+* Released March 2013
 
 = Code =
 * Added `excerpt_more_link` and attached to `excerpt_more` filter
@@ -13,6 +13,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added Comment Tabs for each type (Comment, Pingback, and Trackback)
 * Created and enqueued 'opus-primus-comment-tabs.js'
 * Created Header class
+* Drop `restore_image_title` filter hook into `media_send_to_editor` as potentially blocking insertion of media
 * Fixed comments (only) count output
 * Limit width generated by "Full Size Video" JavaScript to a maximum of 1000px
 * Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
